# pypackaging

cookicutter_v1/: .gitignore  Pipfile  README.md  graph.json  publishstubs.py  pyproject.toml  setup.py  tasks.py
cookicutter_v1/src/pkg_name/: __init__.py  calculate.py
test/: test_pystubs.py
